--- a/src/style.scss
+++ b/src/style.scss
@@ -12,47 +12,97 @@
     margin: 0;
 }
 
+// body {
+//     background-color: rgb(97, 130, 238);
+// }
+
 #container{
-    width: 80%;
+    width: 85%;
     margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
     justify-content: space-evenly;
     font-family: 'Open Sans';
+    // text-align: center;
 }
 
+h1, h3{
+    width: 100%;
+    text-align: center;
+}
+
+// h3{
+//     text-align: center;
+// }
+
 #team{
-    width: 30%;
-    float: left;
+    width: 85%;
+    
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+#teamDivOne{
+    width:50%;
+    background: url('./assets/images/field.png');
+    background-repeat: no-repeat;
+  background-size: 115% 85%;
+  background-position-x: center;
+  
+  
 }
 
 #main-team{
+    width: 100%;
+    margin: auto;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-evenly;
+    
+}
+
+#teamDivTwo{
+    width: 30%;
+    // display: flex;
+    // flex-direction: row;
+    // flex-wrap: wrap;
+    // justify-content: space-evenly;
+}
+
+#interchange, #followers {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .pos {
-    width: 4vw;
-    height: 4vw;
+    width: 3vw;
+    height: 5.5vw;
     /* padding: 0.5vw; */
-    margin: 1vw 1vw;
-    border: 1px solid #aaaaaa;
+    box-shadow: 0 10px #646363;
+    margin: 2vh 4vw;
+    // border: 1px solid #aaaaaa;
 }
 
 #squad{ 
     width: 10%;
-    float: right;
 }
 
 #playerContainer{
     width: 5vw;
-    height: 500px;
+    height: 80vh;
     padding: 0.5vw 1vw;
     border: 1px solid #aaaaaa;
     overflow: scroll;
 }
 
 .player {
-    width: 5vw;
+    width: 100%;
      height: auto;
      margin-bottom: 20%;
 }
