--- a/src/style.scss
+++ b/src/style.scss
@@ -12,48 +12,38 @@
     margin: 0;
 }
 
-// body {
-//     background-color: rgb(97, 130, 238);
-// }
-
 #container{
-    width: 80%;
+    width: 40%;
     margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-evenly;
     font-family: 'Open Sans';
-    // text-align: center;
 }
 
-h1, h3{
+h1 {
+    margin-bottom: 3%;
     width: 100%;
     text-align: center;
 }
 
+h2{
+    margin-bottom: 10%;
+}
+
 h3 {
+    width: 100%;
     padding: 1vh;
 }
 
 #team{
     width: 85%;
-    
-    // display: flex;
-    // flex-wrap: wrap;
-    // flex-direction: row;
-    // justify-content: space-evenly;
+    float: left;
 }
 
 #teamDivOne{
-    width:50%;
     background: url('./assets/images/field.png');
     background-repeat: no-repeat;
     background-size: 115% 100%;
     background-position-x: center;
     background-position-y: center;
-  
-  
 }
 
 #main-team{
@@ -66,34 +56,23 @@ h3 {
     
 }
 
-#teamDivTwo{
-    width: 50%;
-    // margin: auto;
-    // display: flex;
-    // flex-direction: row;
-    // flex-wrap: wrap;
-    // justify-content: space-evenly;
-}
-
 #interchange, #followers {
     display: flex;
     flex-direction: row;
-    // flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     width: 100%;
 }
 
 .pos {
     width: 3vw;
     height: 4.5vw;
-    /* padding: 0.5vw; */
     box-shadow: 0 5px #2c2b2b;
-    margin: 2vh 2.8vw;
-    // border: 1px solid #aaaaaa;
+    margin: 1vh 2.8vw;
 }
 
 #squad{ 
     width: 10%;
+    float: right;
 }
 
 #playerContainer{
