--- a/src/style.scss
+++ b/src/style.scss
@@ -39,6 +39,7 @@ h3 {
 }
 
 #teamDivOne{
+    width:100%;
     background: url('./assets/images/field.png');
     background-repeat: no-repeat;
     background-size: 115% 100%;
@@ -48,12 +49,14 @@ h3 {
 
 #main-team{
     width: 100%;
-    margin: auto;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+    display: grid;
+    grid-row-gap: 2%;
+    grid-template-columns: auto auto auto;
     
+}
+
+#forward{
+    margin-top: 10%;
 }
 
 #interchange, #followers {
@@ -64,10 +67,11 @@ h3 {
 }
 
 .pos {
-    width: 3vw;
-    height: 4.5vw;
+    width: 4.5vw;
+    height: 6vw; 
     box-shadow: 0 5px #2c2b2b;
-    margin: 1vh 2.8vw;
+    margin: 1% auto;
+    font-size: 0.9em;
 }
 
 #squad{ 
@@ -77,7 +81,7 @@ h3 {
 
 #playerContainer{
     width: 5vw;
-    height: 80vh;
+    height: 90vh;
     padding: 0.5vw 1vw;
     border: 1px solid #aaaaaa;
     overflow: scroll;
