changed headshot placeholders

--- a/src/style.scss
+++ b/src/style.scss
@@ -80,7 +80,8 @@ h3 {
     height: 6vw; 
     margin: 1% auto;
     font-size: 0.9em;
-    background-image: url('./assets/images/cross.png');
+    background-image: url('./assets/images/placeholder.png');
+    background-repeat: no-repeat;
    
     
 }
