Moved click span styles from JS to scss

--- a/src/style.scss
+++ b/src/style.scss
@@ -29,6 +29,12 @@
     margin-bottom: 2%;
 }
 
+#click {
+    color: #e1dd10;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
 h2{
     margin-bottom: 15%;
     padding-left: 1vh;
