--- a/src/style.scss
+++ b/src/style.scss
@@ -49,17 +49,12 @@ h3 {
 }
 
 #team{
-    width: 85%;
+    width: 80%;
     float: left;
 }
 
 #teamDivOne{
     width:100%;
-    background: url('./assets/images/field.png');
-    background-repeat: no-repeat;
-    background-size: 119% 95%;
-    background-position-x: 60%;
-    background-position-y: 45%;
 }
 
 #main-team{
@@ -67,15 +62,18 @@ h3 {
     display: grid;
     grid-row-gap: 0.75%;
     grid-template-columns: auto auto auto;
+    background: url('./assets/images/field.png');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 
 #back{
-    margin-bottom: 5%;
+    // margin-bottom: 3%;
     text-align: center;
 }
 
 #forward{
-    margin-top: 10%;
+    // margin-top: 5%;
     text-align: center;
 }
 
@@ -87,25 +85,25 @@ h3 {
 }
 
 .pos {
-    width: 5.5vw;
+    width: 5.2vw;
     height: 6vw; 
     margin: 1% auto;
-    font-size: 0.9em;
-    background-image: url('./assets/images/placeholder.png');
+    font-size: 0.8em;
+    background-image: url('./assets/images/placeholder1.png');
     background-repeat: no-repeat;
    
     
 }
 
 #squad{ 
-    width: 10%;
+    width: 15%;
     float: right;
 }
 
 #playerContainer{
-    width: 5vw;
+    width: 100%;
     height: 105vh;
-    padding: 0.5vw 1vw;
+    padding: 0.5vw .5vw;
     border: 3px solid #e1dd10;
     overflow: scroll;
 }
@@ -113,7 +111,6 @@ h3 {
 .player {
     width: 100%;
      height: auto;
-     margin-bottom: 20%;
      text-align: center;
 }
 
